assets/css/style.css
.sec-1 {
  background-color: #000000;
  height: 100vh;
}

.sign {
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.sign img {
  width: 300px;
  height: auto;
}

.corners {
  position: absolute;
  width: 100%;
}

.corners img {
  width: 300px;
  height: auto;
}

#tl {
  position: fixed;
  top: -150px;
  left: -150px;
}

#tr {
  position: fixed;
  top: -150px;
  right: -150px;
}

#bl {
  position: fixed;
  left: -150px;
  bottom: -150px;
}

#br {
  position: fixed;
  bottom: -150px;
  right: -150px;
}

.sec-2 {
  background-color: #000000;
  width: 100%;
  height: 100vh;
}

nav {
  position: fixed;
  top: 30%;
  bottom: 30%;
  left: 2%;
  width: 60px;
  padding: 60px 0;
}

nav ul {
  height: 100%;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

nav ul li {
  width: 5px;
  height: 5px;
  border-radius: 50%;
  cursor: pointer;
  background-color: #f4f4e4;
}

.active {
  box-shadow: 0 0 0 3px #ffffff;
}

.sec-3 {
  background-color: #000000;
  height: 100vh;
}

ul {
  list-style: none;
}

.center-div {
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.bookWrapper {
  width: 800px;
  height: 400px;
}

.bookWrapper img {
  height: 100%;
  width: 100%;
}

.bookBg {
  position: relative;
  background-color: #000000;
  width: 100%;
  height: 100%;
}

.pageBg {
  position: absolute;
  left: 50%;
  top: 50%;
  background-image: url("../media/butterfly-bg.jpg");
  background-size: 800px 400px;
  width: 100%;
  height: 100%;
}

.pageWrapper {
  position: absolute;
  width: 50%;
  height: 100%;
  float: left;
}

.page {
  position: absolute;
  width: 100%;
  height: 100%;
}

.pageFace {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  text-align: center;
}

.one {
  width: 400px;
  height: 400px;
  background-color: aqua;
}

.two {
  width: 247px;
  height: 247px;
  background-color: rgb(255, 0, 0);
}

.three {
  width: 153px;
  height: 153px;
  background-color: rgb(255, 251, 0);
}

.four {
  width: 94.5px;
  height: 94.5px;
  background-color: rgb(0, 255, 76);
}

.five {
  width: 58.5px;
  height: 58.5px;
  background-color: rgb(255, 0, 149);
}

.six {
  width: 36px;
  height: 36px;
  background-color: rgb(0, 60, 255);
}

.seven {
  width: 22.3px;
  height: 22.3px;
  background-color: rgb(255, 145, 0);
}

.eight {
  width: 14px;
  height: 14px;
  background-color: rgb(204, 0, 255);
}

.nine {
  width: 14px;
  height: 8.3px;
  background-color: rgb(0, 195, 255);
}

